# CarpetWeave

./: .gitignore  README.md
cpp/: CMakeLists.txt  README.md
cpp/include/: csv_writer.hpp  feature_extractor.hpp  pcap_reader.hpp  sliding_window.hpp
cpp/src/: csv_writer.cpp  feature_extractor.cpp  main.cpp  pcap_reader.cpp  sliding_window.cpp
data/: config.json  stats.json  stats_seq.json
python/: README.md  analyze_features.py  low_rank_experiment.py  matrix_analysis.py  matrix_decomposition.py  stability_experiment.py  utils.py  visualize.py
python/results/: rank_report.txt  rank_results.json  stability_report.txt  stability_results.json
python/test_results/: model.pkl
